--- a/style.css
+++ b/style.css
@@ -218,10 +218,8 @@
     color: #04a7f8;
 }
 @media screen and (max-width: 769px) {
-    .body_root{
-        position: relative;
-        z-index: 1;
-        width: 100%;
+    .tn-elem__3247127481623275730261{
+        z-index: -1;
     }
     .hero_sec{
         width: 100%;
